--- a/ins/package.json
+++ b/ins/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
+    "reactjs-popup": "^1.5.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.5"
   },
