--- a/ins/package.json
+++ b/ins/package.json
@@ -15,6 +15,7 @@
     "react-lottie": "^1.2.3",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
+    "reactjs-popup": "^1.5.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.5"
   },
